--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concept</title>
+    <title>Peeple</title>
     <style>
         /* Global Styles */
         body {
@@ -146,7 +146,7 @@
 
 <body>
     <header>
-        <h1>Pitch Deck</h1>
+        <h1>Concept</h1>
     </header>
 
     <div class="content">
