--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
             }
         }
     </style>
-    </style>
 </head>
 
 <body>
@@ -162,15 +161,16 @@
             <h2>Key Problems Identified</h2>
             <p>Through our research with:</p>
             <ul>
-                <li>30+ female dating app users</li>
+                <li>30+ female dating app user Inteviews</li>
                 <li>Product managers from Bumble and Tinder</li>
                 <li>One month of market study</li>
             </ul>
             <p>Two major issues emerged:</p>
             <ul>
-                <li>Safety within the app: Challenges include sexual messages, stalking, and other forms of harassment.
+                <li><strong>Safety within the app</strong>: Challenges include sexual messages, stalking, and other
+                    forms of harassment.
                 </li>
-                <li>Quality of men's profiles ("good crowd"):</li>
+                <li><strong> Quality of men's profiles ("good crowd"):</strong></li>
             </ul>
         </div>
 
@@ -219,13 +219,13 @@
                 <li><strong>Hinge users:</strong> Majority expected</li>
                 <li><strong>Bumble female users:</strong> 30% (targeted capture of 2.1 million total Bumble female users
                     in India),
-                    equaling 660,000.</li>
+                    equaling 6.6 lakh.</li>
             </ul>
             <p>Projected Initial User Base:</p>
             <ul>
-                <li><strong>Total users:</strong> 1,800,000</li>
-                <li><strong>Female users:</strong> 1,000,000</li>
-                <li><strong>Male users:</strong> 800,000</li>
+                <li><strong>Total users:</strong> 18 lakh</li>
+                <li><strong>Female users:</strong> 10 lakh</li>
+                <li><strong>Male users:</strong> 8 lakh</li>
             </ul>
         </div>
 
@@ -250,7 +250,7 @@
             </ul>
             <p><strong>Daily Top-ups:</strong></p>
             <ul>
-                <li>Comments: ₹25/month</li>
+                <li>Comments: ₹25</li>
                 <li>Rose: ₹20</li>
                 <li>Spotlight (1 hour): ₹25</li>
             </ul>
@@ -265,8 +265,8 @@
             <h3>Subscription Revenue</h3>
             <p><strong>Male Users:</strong></p>
             <ul>
-                <li><strong>Total male users:</strong> 800,000</li>
-                <li><strong>Paying users (20%):</strong> 160,000</li>
+                <li><strong>Total male users:</strong> 8 lakh</li>
+                <li><strong>Paying users (20%):</strong> 1.6 lakh</li>
                 <li><strong>Average monthly revenue per paying user:</strong>
                     <ul>
                         <li>Premium (₹99/6): ₹16.50 (Assumes user buys monthly subscriptions twice a year)</li>
@@ -276,12 +276,12 @@
                         <li><strong>Total monthly ARPU:</strong> ₹126.50</li>
                     </ul>
                 </li>
-                <li><strong>Annual revenue:</strong> 160,000 × ₹126.50 × 12 = ₹243,360,000</li>
+                <li><strong>Annual revenue:</strong> 1.6 lakh × ₹126.50 × 12 = ₹243.36 crore</li>
             </ul>
             <p><strong>Female Users:</strong></p>
             <ul>
-                <li><strong>Total female users:</strong> 1,000,000</li>
-                <li><strong>Paying users (10%):</strong> 100,000</li>
+                <li><strong>Total female users:</strong> 10 lakh</li>
+                <li><strong>Paying users (10%):</strong> 1 lakh</li>
                 <li><strong>Average monthly revenue per paying user:</strong>
                     <ul>
                         <li>Advanced filter (₹40/6): ₹6.67 (Assumes user buys monthly subscriptions twice a year)</li>
@@ -290,31 +290,31 @@
                         <li><strong>Total monthly ARPU:</strong> ₹71.67</li>
                     </ul>
                 </li>
-                <li><strong>Annual revenue:</strong> 100,000 × ₹71.67 × 12 = ₹86,004,000</li>
+                <li><strong>Annual revenue:</strong> 1 lakh × ₹71.67 × 12 = ₹86.004 crore</li>
             </ul>
             <h3>Advertising Revenue</h3>
             <ul>
-                <li><strong>Total users:</strong> 1,800,000</li>
+                <li><strong>Total users:</strong> 18 lakh</li>
                 <li><strong>Daily ads seen per user:</strong> 2 (We assume that each user gets 15 free likes per day and
                     thus will swipe an average of 30 times per day—15 likes and 15 dislikes)</li>
-                <li><strong>Annual impressions:</strong> 1,800,000 × 2 × 365 = 1,314,000,000</li>
+                <li><strong>Annual impressions:</strong> 18 lakh × 2 × 365 = 13.14 crore</li>
                 <li><strong>Average ad rate:</strong> ₹0.75 per impression</li>
-                <li><strong>Annual ad revenue:</strong> 1,314,000,000 × ₹0.75 = ₹985,500,000</li>
+                <li><strong>Annual ad revenue:</strong> 13.14 crore × ₹0.75 = ₹985.5 crore</li>
             </ul>
             <h3>Total Annual Revenue</h3>
             <ul>
-                <li><strong>Subscription revenue:</strong> ₹243,360,000 + ₹86,004,000 = ₹329,364,000</li>
-                <li><strong>Advertising revenue:</strong> ₹985,500,000</li>
-                <li><strong>Total annual revenue:</strong> ₹1,314,864,000</li>
+                <li><strong>Subscription revenue:</strong> ₹243.36 crore + ₹86.004 crore = ₹329.364 crore</li>
+                <li><strong>Advertising revenue:</strong> ₹985.5 crore</li>
+                <li><strong>Total annual revenue:</strong> ₹1,314.864 crore</li>
             </ul>
         </div>
 
         <div class="card">
             <h2>Customer Acquisition Cost (CAC)</h2>
             <p><strong>CAC1 (Female-focused marketing):</strong><br>
-                - Revenue per female user = ₹1,314.86</p>
+                - Revenue per female user = ₹13.15 lakh</p>
             <p><strong>CAC2 (Total user base):</strong><br>
-                - Revenue per user = ₹730.48</p>
+                - Revenue per user = ₹7.30 lakh</p>
         </div>
     </div>
 
