--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
                     profile quality is
                     primarily a female-specific demand.</li>
             </ul>
-            <p>In short, we aim to build a platform better than Hinge, leveraging our lower capital requirements to keep
+            <p>In short, we will to build a platform better than Hinge, leveraging our lower capital requirements to
+                keep
                 prices affordable. Our basic plan will be <strong>free for women</strong> to encourage onboarding.</p>
         </div>
 
@@ -210,7 +211,8 @@
                 <li><strong>Male users:</strong> 800,000</li>
                 <li><strong>Female users:</strong> 400,000</li>
             </ul>
-            <p>We aim to acquire the majority of Hinge's user base in India, especially as our platform will be
+            <p>We will acquire the majority of Hinge's user base in India, due to superior and more affordable product
+                specially
                 <strong>free for
                     women</strong>.
             </p>
