hoke ve tu door ve sajna

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             <p>Expected Market Capture:</p>
             <ul>
                 <li><strong>Hinge users:</strong> Majority expected</li>
-                <li><strong>Bumble female users:</strong> 30% (targeted capture of 2.1 million total Bumble female users
-                    in India),
+                <li><strong>Bumble female users:</strong> we will acquire 30% of bumble female users because of our easy
+                    onbording for girls and hard onbording for boys,
                     equaling 6.6 lakh.</li>
             </ul>
             <p>Projected Initial User Base:</p>
