sade naal rhoge te aish kroge

--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
     <header>
         <h1>Concept</h1>
     </header>
-
     <div class="content">
         <div class="card">
             <h2>Problem Statement & Market Opportunity</h2>
@@ -245,7 +244,11 @@
                 </li>
                 <li><strong>Female:</strong>
                     <ul>
-                        <li>Advanced search filters (IIT/IIM/Google): ₹40/month</li>
+                        <li>Advanced search filters
+                            <span style="font-size: 15px; color: #8b5cf6;">(Women can fliter people who are in
+                                IIT, IIM, Google, Amazone etc)</span>
+                        </li>
+                        <li>₹40/month</li>
                         <li>(We assume users buy monthly subscriptions twice a year, hence 1/6 times a month)</li>
                     </ul>
                 </li>
