me tera boyfriend tu meri girlfriend

--- a/index.html
+++ b/index.html
@@ -295,36 +295,36 @@
                         <li><strong>Total monthly ARPU:</strong> ₹71.67</li>
                     </ul>
                 </li>
-                <li><strong>Annual revenue:</strong> 1 lakh × ₹71.67 × 12 = ₹86.004 crore</li>
+                <li><strong>Annual revenue:</strong> 1 lakh × ₹71.67 × 12 = ₹8.6 crore</li>
             </ul>
             <h3>Advertising Revenue</h3>
             <ul>
                 <li><strong>Total users:</strong> 18 lakh</li>
                 <li><strong>Daily ads seen per user:</strong> 2 (We assume that each user gets 15 free likes per day and
                     thus will swipe an average of 30 times per day—15 likes and 15 dislikes)</li>
-                <li><strong>Annual impressions:</strong> 18 lakh × 2 × 365 = 13.14 crore</li>
+                <li><strong>Annual impressions:</strong> 18 lakh × 2 × 365 = 131.4 crore</li>
                 <li><strong>Average ad rate:</strong> ₹0.75 per impression</li>
-                <li><strong>Annual ad revenue:</strong> 13.14 crore × ₹0.75 = ₹985.5 crore</li>
+                <li><strong>Annual ad revenue:</strong> 131.4 crore × ₹0.75 = ₹98.5 crore</li>
             </ul>
             <h3>Total Annual Revenue</h3>
             <ul>
-                <li><strong>Subscription revenue:</strong> ₹243.36 crore + ₹86.004 crore = ₹329.364 crore</li>
-                <li><strong>Advertising revenue:</strong> ₹985.5 crore</li>
-                <li><strong>Total annual revenue:</strong> ₹1,314.864 crore</li>
+                <li><strong>Subscription revenue:</strong> ₹24.336 crore + ₹8.6004 crore = ₹32.9364 crore</li>
+                <li><strong>Advertising revenue:</strong> ₹98.55 crore</li>
+                <li><strong>Total annual revenue:</strong> ₹131.4 crore</li>
             </ul>
         </div>
 
         <div class="card">
             <h2>Customer Acquisition Cost (CAC)</h2>
             <p><strong>CAC1 (Female-focused marketing):</strong><br>
-                - Revenue per female user = ₹13.15 lakh</p>
+                - Affordable CAC = ₹131.4 cr ÷ 10 lakh = ₹1,314.86</p>
             <p><strong>CAC2 (Total user base):</strong><br>
-                - Revenue per user = ₹7.30 lakh</p>
+                - Affordable CAC = ₹131.4 cr ÷ 8 lakh = ₹730.48</p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2023 Pitch Deck. All rights reserved.</p>
+        <p>&copy; 2023 Peeple. All rights reserved.</p>
     </footer>
 </body>
 
