tere bina besuadi besuadi sajnaa

--- a/index.html
+++ b/index.html
@@ -303,23 +303,24 @@
                 <li><strong>Daily ads seen per user:</strong> 2 (We assume that each user gets 15 free likes per day and
                     thus will swipe an average of 30 times per day—15 likes and 15 dislikes)</li>
                 <li><strong>Annual impressions:</strong> 18 lakh × 2 × 365 = 131.4 crore</li>
-                <li><strong>Average ad rate:</strong> ₹0.75 per impression</li>
-                <li><strong>Annual ad revenue:</strong> 131.4 crore × ₹0.75 = ₹98.5 crore</li>
+                <li><strong>Average ad rate:</strong> ₹0.075 per impression</li>
+                <li><strong>fill rate:</strong> 50%</li>
+                <li><strong>Annual ad revenue:</strong> 131.4 crore × ₹0.075 * 0.5 = ₹4.9 crore</li>
             </ul>
             <h3>Total Annual Revenue</h3>
             <ul>
                 <li><strong>Subscription revenue:</strong> ₹24.336 crore + ₹8.6004 crore = ₹32.9364 crore</li>
-                <li><strong>Advertising revenue:</strong> ₹98.55 crore</li>
-                <li><strong>Total annual revenue:</strong> ₹131.4 crore</li>
+                <li><strong>Advertising revenue:</strong> ₹4.9 crore</li>
+                <li><strong>Total annual revenue:</strong> ₹37.8 crore</li>
             </ul>
         </div>
 
         <div class="card">
             <h2>Customer Acquisition Cost (CAC)</h2>
             <p><strong>CAC1 (Female-focused marketing):</strong><br>
-                - Affordable CAC = ₹131.4 cr ÷ 10 lakh = ₹1,314.86</p>
+                - Affordable CAC = ₹37.8 cr ÷ 10 lakh = ₹378</p>
             <p><strong>CAC2 (Total user base):</strong><br>
-                - Affordable CAC = ₹131.4 cr ÷ 18 lakh = ₹730.48</p>
+                - Affordable CAC = ₹37.8 cr ÷ 18 lakh = ₹210</p>
         </div>
     </div>
 
