rangsari gulabi chunariya re

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
     <div class="content">
         <div class="card">
             <h2>Problem Statement & Market Opportunity</h2>
-            <p>"Indian women are satisfied on dating apps but not delighted."<br>
-                This gap presents a significant opportunity in India, where dating apps suffer from a highly skewed
-                gender ratio of 80:20 (men to women). Our guiding principle: if we can attract women to our platform,
-                men will follow.</p>
+            <p>"Indian women have two pain points <strong>1.Quality Profile</strong> <strong>2.Safety within
+                    app</strong>"<br>
+                Hinge currently solves Problem 1 Strongly and Problem 2 decently , but we believe we can do a better job
+                at it. Read below to know how</p>
         </div>
 
         <div class="card">
