--- a/index.html
+++ b/index.html
@@ -193,10 +193,15 @@
     <div class="content">
         <div class="card">
             <h2>Problem Statement & Market Opportunity</h2>
-            <p>"Indian women have two pain points <strong>1.Quality Profile</strong> <strong>2.Safety within
-                    app</strong>"<br>
-                Hinge currently solves Problem 1 Strongly and Problem 2 decently , but we believe we can do a better job
-                at it. Read below to know how</p>
+            <p>Indian women face two major pain points:</p>
+            <ul>
+                <li><strong>Quality Profiles</strong></li>
+                <li><strong>Safety within the App</strong></li>
+            </ul>
+            <p>Hinge addresses Quality Profiles strongly and Safety decently, but it's time to show them how it's really
+                done.
+                Read below to see how.</p>
+
         </div>
 
         <div class="card">
