--- a/index.html
+++ b/index.html
@@ -183,13 +183,88 @@
                 margin: 30px 20px;
             }
         }
+
+        .progress-container {
+            width: 100%;
+            height: 4px;
+            background: transparent;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .progress-bar {
+            height: 100%;
+            background: linear-gradient(to right, #8b5cf6, #9061f9);
+            width: 0%;
+            transition: width 0.2s ease;
+            box-shadow: 0 2px 4px rgba(139, 92, 246, 0.3);
+        }
+
+        .progress-percent {
+            position: fixed;
+            top: 10px;
+            right: 20px;
+            background: #8b5cf6;
+            color: white;
+            padding: 6px 12px;
+            border-radius: 20px;
+            font-size: 20px;
+            font-weight: 500;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+
+        .progress-percent.visible {
+            opacity: 1;
+        }
+
+        @media (max-width: 768px) {
+            .progress-percent {
+                font-size: 12px;
+                padding: 4px 8px;
+                top: 8px;
+                right: 12px;
+            }
+        }
     </style>
 </head>
+
+<script>
+    // Add progress tracking script
+    window.onscroll = function () {
+        updateProgress();
+    };
+
+    function updateProgress() {
+        const winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+        const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+        const scrolled = (winScroll / height) * 100;
+
+        document.querySelector(".progress-bar").style.width = scrolled + "%";
+        document.querySelector(".progress-percent").textContent = Math.round(scrolled) + "%";
+
+        // Show percentage when scrolling starts
+        const percentElement = document.querySelector(".progress-percent");
+        if (scrolled > 0) {
+            percentElement.classList.add("visible");
+        } else {
+            percentElement.classList.remove("visible");
+        }
+    }
+</script>
 
 <body>
     <header>
         <h1>Concept</h1>
     </header>
+    <div class="progress-container">
+        <div class="progress-bar"></div>
+    </div>
+    <div class="progress-percent">0%</div>
     <div class="content">
         <div class="card">
             <h2>Problem Statement & Market Opportunity</h2>
@@ -203,6 +278,7 @@
                 Read below to see how.</p>
 
         </div>
+
 
         <div class="card">
             <h2>Key Problems Identified</h2>
