--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peeple</title>
+    <link rel="icon" type="image/x-icon" href="peeple.ico">
     <style>
         /* Global Styles */
         body {
