--- a/index.html
+++ b/index.html
@@ -202,35 +202,6 @@
             transition: width 0.2s ease;
             box-shadow: 0 2px 4px rgba(139, 92, 246, 0.3);
         }
-
-        .progress-percent {
-            position: fixed;
-            top: 10px;
-            right: 20px;
-            background: #8b5cf6;
-            color: white;
-            padding: 6px 12px;
-            border-radius: 20px;
-            font-size: 20px;
-            font-weight: 500;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-            transition: opacity 0.3s ease;
-            opacity: 0;
-        }
-
-        .progress-percent.visible {
-            opacity: 1;
-        }
-
-        @media (max-width: 768px) {
-            .progress-percent {
-                font-size: 12px;
-                padding: 4px 8px;
-                top: 8px;
-                right: 12px;
-            }
-        }
     </style>
 </head>
 
@@ -265,7 +236,7 @@
     <div class="progress-container">
         <div class="progress-bar"></div>
     </div>
-    <div class="progress-percent">0%</div>
+    <!-- <div class="progress-percent">0%</div> -->
     <div class="content">
         <div class="card">
             <h2>Problem Statement & Market Opportunity</h2>
