lately iv been loosing lot of sleep

--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
         <div class="card">
             <h2>Market Analysis</h2>
             <h3>Total Addressable Market (TAM)</h3>
-            <p>Our TAM includes all global dating app users.<br>
-                We see this as an interaction problem, not a dating problem, and intend to address this gap by entering
-                the market with a targeted approach before diversifying through multiple apps. Effective messaging is
-                key to resonating with our target audience; thus, one app cannot satisfy the entire world.</p>
+            <p>We want to be a Monopolly in Global dating Market like Match Group but <strong>will do it
+                    better.</strong><br>
+                We see this as an interaction problem, not a dating problem, with this app we are just entering the
+                market.</p>
 
             <h3>Indian Market Specifics (2024)</h3>
             <ul>
